@@ -87,6 +87,9 @@ main = shaken (\a b -> unless brokenHaddock $ noTest a b) $ \args obj -> do
             ,"(==>) = undefined"
             ,"(<==) = ()"
             ,"infix 1 ==>"
+            ,"infix 0 ==="
+            ,"(===) :: a -> a -> b"
+            ,"(===) = undefined"
             ,"forAll f = f undefined"
             ,"remaining = 1.1"
             ,"done = 1.1"
@@ -104,6 +107,8 @@ main = shaken (\a b -> unless brokenHaddock $ noTest a b) $ \args obj -> do
             ,"myVariable = ()"
             ,"instance Eq (OptDescr a)"
             ,"(foo,bar,baz) = undefined"
+            ,"(p1,p2) = (0.0, 0.0)"
+            ,"(r1,r2) = (return () :: Rules(), return () :: Rules())"
             ,"xs = []"
             ,"ys = []"
             ,"out = \"\""
