@@ -1,5 +1,6 @@
 Changelog for Shake
 
+    Improve the documentation for priority/alternative
     #448, fix FSATrace on Mac 10.11
     #444, optimise copyFileChanged
     Require extra-1.4.4
